welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:8: error: ';' expected but 'false' found.
  retrun false
         ^